# pc_prueba_ros2_ws

./: frames_2024-09-24_21.01.06.gv  frames_2024-09-25_12.35.15.gv  frames_2024-09-26_12.40.45.gv  frames_2024-10-02_10.15.51.gv  frames_2024-10-03_10.35.31.gv  frames_2024-10-03_11.10.07.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build  latest_list
src/jsc_bot_description/: CMakeLists.txt  package.xml
src/jsc_bot_description/launch/: display.launch.py
src/jsc_mobile_robot/: CMakeLists.txt  package.xml
src/jsc_mobile_robot/config/: diff_drive_controller.yaml
src/jsc_mobile_robot/launch/: jsc_mobile_bot_v1_launch.py  jsc_mobile_bot_v2_launch.py  jsc_mobile_bot_v3_launch.py  jsc_mobile_bot_v4_launch.py  jsc_mobile_bot_v4_launch_copy.py  jsc_mobile_bot_v5_launch.py
src/jsc_mobile_robot/models/: jsc_mobile_bot_v1.urdf  jsc_mobile_bot_v2.urdf  jsc_mobile_bot_v2_copy.urdf
src/jsc_mobile_robot/models/Pasillo_Telematica/: model.config  model.sdf
src/jsc_mobile_robot/models/jsc_mobile_bot_description/: model.config  model.sdf
src/jsc_mobile_robot/rviz/: urdf_config_v2.rviz
src/jsc_mobile_robot/worlds/jsc_mobile_bot_world/: pasillo_telematica.world  pasillo_telematica_v2.world  pasillo_telematica_v3.world
src/robot_controller/: package.xml  setup.py
src/robot_distancia/: setup.cfg  setup.py
src/robot_nav2/: setup.cfg  setup.py
src/robot_nav2/config/: map.yaml  (+1 more)
src/robot_sensor_distance/: package.xml  setup.cfg  setup.py
src/robot_slam/: CMakeLists.txt  package.xml
src/wheel_control/: package.xml  setup.py
(+206 files in other folders)
